welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:9: error: ';' expected but ')' found.
      case (_,_,_)=>5)}
                     ^blueTicket:10: error: ')' expected but '}' found.
    } 
    ^