welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
  	val ab = a+b
  	val ac = a+c
  	val bc = b+c
  return (
  	(ab,ac,bc) match {
      case (10,_,_)|(_,10,_)|(_,_,10) =>10
      case (10+d,d,_)|(10+d,_,d)=>5
      case (_,_,_)=>5)}
    }